--- a/sass/header.scss
+++ b/sass/header.scss
@@ -2,13 +2,11 @@
 $bg-color:red;
 $branco:white;
 
-.class{
+.h1{
     font-size:15px;
     width: 50%;
     background-color: $bg-color;
     color:$branco;
-    display: flex;
-    justify-content: space-between;
 
     h1,p,{
         color:$branco;
@@ -16,5 +14,10 @@ $branco:white;
     .kaka{
         width: 20%;
         font-size:10px;
+        color:$bg-color;
+        color:$branco;
+        display: inline;
+        text-emphasis: none;
+        display: block;
     }
 }
