--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,18 +43,39 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-.h1 {
-  font-size: 15px;
-  width: 50%;
-  background-color: red;
-  color: white; }
-  .h1 h1, .h1 p {
+header {
+  height: 550px;
+  background-image: url(../img/bd_1.png);
+  background-repeat: no-repeat;
+  background-position: top; }
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  line-height: 80px;
+  vertical-align: middle; }
+  .nav-bar h1 {
+    padding-top: 5px;
     color: white; }
-  .h1 .kaka {
-    width: 20%;
-    font-size: 10px;
-    color: red;
+  .nav-bar ul li {
+    display: inline-block; }
+    .nav-bar ul li a {
+      padding: 0.7em; }
+
+.nav-bar-links {
+  margin-right: 4em; }
+
+.header_text {
+  text-align: center;
+  margin-top: 6em; }
+  .header_text h2 {
+    font-size: 4.5em;
+    color: #5d99c6;
+    font-family: "Lobster", cursive; }
+  .header_text p {
     color: white;
-    display: inline;
-    text-emphasis: none;
-    display: block; }
+    font-family: 'Segoe-UI',cursive;
+    font-size: 1.5em; }
+  .header_text a {
+    display: block;
+    margin-top: 3em; }
