--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,4 +1,10 @@
 @import 'reset';
-@import 'header';
+@import '_variables';
 @import '_mixins';
+@import '_buttons';
+@import 'header';
+@import '_main';
+
+
+
 
