--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,11 +1,41 @@
 #last_decorations{
+    margin-top: 5em;
     h3{
     padding:2em;
     font-weight: bold;
     }
     a{
-        margin-top: 2em !important;
         background-color:$padrao; 
         color:White;
+        margin: 3em 0;
+        
+        &:hover,&:focus{
+            text-decoration: none;
+            background-color: $hover;
+        }
+    }
+    margin-bottom: 5em;
+}
+.center_link{
+    display: flex;
+    justify-content: center;
+}
+#we_do{
+    img{
+        padding-top:6em;
+        width:300px;  
+        
     }
 }
+.we_do{
+    h3{
+        padding:2em;
+        font-weight: bold;
+    }
+    p{
+        margin-left:0.5em;
+        font-size: 1.3rem;
+    }
+   
+}
+
