--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,8 +1,10 @@
 header{
+width: 100%;
 height: 550px;
 background-image: url(../img/bd_1.png);
 background-repeat: no-repeat;
 background-position:top;
+background-size: cover; 
 
 }
 .nav-bar{
