--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -26,6 +26,13 @@ footer{
             }
         }      
 }
+@media only screen and (max-width:760px ) {
+    .menu-footer{
+        display: flex;
+        justify-content: center;
+    
+    }
+}
 .links-footer{
     display: flex;
    justify-content: center;
