--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -20,7 +20,11 @@
 }
 .card{
     box-shadow: 0px 0px 25px $hoverLink;
+    @media only screen and (max-width:576px){
+        box-shadow: 0px 0px 0px white;
+    }
 }
+
 .center_link{
     display: flex;
     justify-content: center;
