28-03-18 sprint final, adicionando grid system para responsividade

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,7 +4,8 @@ height: 550px;
 background-image: url(../img/bd_1_2.png);
 background-repeat: no-repeat;
 background-position:top;
-background-size: cover; 
+background-size: cover;
+background-attachment: fixed;
 
 }
 .links{
