--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -19,7 +19,10 @@
     margin-bottom: 5em;
 }
 .card{
-    box-shadow: 0px 0px 25px $hoverLink;
+    // box-shadow: 0px 0px 15px black;
+    // border: 1px solid $padrao;
+    padding:1em;
+    margin-top: 1.3em;
     @media only screen and (max-width:576px){
         box-shadow: 0px 0px 0px white;
     }
@@ -49,6 +52,15 @@
 }
 .img-large{
     max-height: 295px;
+@media only screen and (max-width:1200px) {
+    max-height:244px;
+}
+@media only screen and (max-width:800px) {
+    max-height:177px;
+}
+@media only screen and (max-width:768px) {
+    max-height:270px;
+}
 }
 #carouselExampleControls{
     box-shadow: 1px 2px 30px black;
