--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,9 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+body {
+  background-color: #fafafa; }
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -64,7 +67,8 @@ header {
   background-image: url(../img/bd_1_2.png);
   background-repeat: no-repeat;
   background-position: top;
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
 
 .links {
   color: black !important;
@@ -114,7 +118,8 @@ header {
       background-color: #29b6f6; }
 
 .card {
-  box-shadow: 0px 0px 25px #01579b; }
+  padding: 1em;
+  margin-top: 1.3em; }
   @media only screen and (max-width: 576px) {
     .card {
       box-shadow: 0px 0px 0px white; } }
@@ -139,17 +144,26 @@ header {
 
 .img-large {
   max-height: 295px; }
+  @media only screen and (max-width: 1200px) {
+    .img-large {
+      max-height: 244px; } }
+  @media only screen and (max-width: 800px) {
+    .img-large {
+      max-height: 177px; } }
+  @media only screen and (max-width: 768px) {
+    .img-large {
+      max-height: 270px; } }
 
 #carouselExampleControls {
   box-shadow: 1px 2px 30px black; }
 
 footer {
   margin-top: 5em;
-  background: #2980b9;
+  background: #232526;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2c3e50, #2980b9);
+  background: -webkit-linear-gradient(to right, #232526, #414345);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2c3e50, #2980b9);
+  background: linear-gradient(to right, #232526, #414345);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
 .menu-footer {
