--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -17,6 +17,10 @@
         }
     }
     margin-bottom: 5em;
+    blockquote{
+        font-family: "roboto";
+        font-size: 1.2em;
+    }
 }
 .card{
     // box-shadow: 0px 0px 15px black;
@@ -36,6 +40,14 @@
     padding-bottom: 2em;
 }
 .we_do{
+    blockquote{
+        font-family: "roboto";
+        font-size: 1.5em;
+        @media only screen and (max-width:424px) {
+            width: 100%;
+            text-align: center;
+        }
+    }
     h3{
         padding:2em;
         font-weight: bold;
@@ -60,6 +72,12 @@
 }
 @media only screen and (max-width:768px) {
     max-height:270px;
+}
+@media only screen and (max-width:570px) {
+    max-height:279px;
+}
+@media only screen and (max-width:320px) {
+    max-height:146px;
 }
 }
 #carouselExampleControls{
