--- a/src/css/index.css
+++ b/src/css/index.css
@@ -116,6 +116,9 @@ header {
     #last_decorations a:hover, #last_decorations a:focus {
       text-decoration: none;
       background-color: #29b6f6; }
+  #last_decorations blockquote {
+    font-family: "roboto";
+    font-size: 1.2em; }
 
 .card {
   padding: 1em;
@@ -130,6 +133,14 @@ header {
 
 #we_do {
   padding-bottom: 2em; }
+
+.we_do blockquote {
+  font-family: "roboto";
+  font-size: 1.5em; }
+  @media only screen and (max-width: 424px) {
+    .we_do blockquote {
+      width: 100%;
+      text-align: center; } }
 
 .we_do h3 {
   padding: 2em;
@@ -153,6 +164,12 @@ header {
   @media only screen and (max-width: 768px) {
     .img-large {
       max-height: 270px; } }
+  @media only screen and (max-width: 570px) {
+    .img-large {
+      max-height: 279px; } }
+  @media only screen and (max-width: 320px) {
+    .img-large {
+      max-height: 146px; } }
 
 #carouselExampleControls {
   box-shadow: 1px 2px 30px black; }
